2005-04-05  James Turner  <james@worldforge.org>

	* Eris/View.cpp, Eris/View.h, Eris/IGRouter.cpp: revert handling of SIGHT
	  of entities to use the IGRouter instead of the Responder code, so we
	  are not reliant on refnos for anything in-game.

2005-04-05  James Turner  <james@worldforge.org>

	* Eris/Connection.cpp, Eris/Connection.h: change Connection so hostname
	  and port are passed as constructor argument, and make the members const.
	  Remove the args to connect and deprecate reconnect(), to make the life-
	  time of Connection obvious - i.e you can't re-use it for different
	  servers.
	  
	 * Eris/Connection.cpp, Eris/Connection.h, Eris/BaseConnection.cpp,
	   Eris/BaseConnection.h: change connect() and disconnect() to return an
	   errno instead of throwing.

2005-04-04  James Turner  <james@worldforge.org>

    * Eris/Entity.cpp: support the 'mode' attribute on MOVE ops

2005-02-21  James Turner  <james@worldforge.org>

	* Eris/View.cpp, Eris/View.h, Eris/IGRouter.cpp: route in-game sight
	  responses through the responder logic.
	  
	* Eris/Response.cpp: make the responder logic deal with re-awaits,
	  since this is needed for redispatching of in-game sights where the
	  entity type is still unbound.

	* Eris/Account.cpp: fix the ordering in loginResponse and avatarResponse,
	  so errors are handled correctly.

2005-02-18  Simon Goodall <simon@simongoodall.co.uk>

	* Eris/TypeInfo.h: Add getParents() accessor.
	
2005-02-17  James Turner  <james@worldforge.org>

	* Eris/Factory.cpp: make the factory set be stored as an auto_ptr, so it
	  gets cleaned up at library tear-down. This should mean Eris cleans up
	  all it's data structures cleanly, but work with valgrind and other
	  tools is needed to verify this.
	  
	* Eris/Account.cpp, Eris/Account.h: change character looks to use the
	  responder system. As a result, AccountRouter is now very small, only
	  handling spontaneous (server-initiated) logout ops.
